--- a/theme/cte/templates/blocks/paymentBlock.html
+++ b/theme/cte/templates/blocks/paymentBlock.html
@@ -5,7 +5,7 @@
                 {{contentDetailCtrl.getLabelByName('paf_text')}}
             </h2>
             <div class="row text-center"  ng-if="(contentDetailCtrl.content.fields.paimentOption).length==0"><p>{{contentDetailCtrl.content.fields.paf_text}}</p></div>-->
-            <h2 class="capital txt-red" ng-class="{'displayed' : paymentCtrl.currentStage==1}" id="debut_procedure" ng-click="paymentCtrl.setCurrentStage(0,proposition_choice.$valid)">Choix de la proposition
+            <h2 class="capital txt-red" ng-class="{'displayed' : paymentCtrl.currentStage==1}" ng-click="paymentCtrl.setCurrentStage(0,proposition_choice.$valid)">Choix de la proposition
                 <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="paymentCtrl.currentStage>1"></span>
             </h2>
             <div id="inscriptionStage1" class="collapse in">
