Mise ne page Article FOI

--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -354,10 +354,10 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		text-align: right;
 }
 
-p .redacteur{
-		font-size: 0.9em;
-		text-transform: uppercase !important;
-		margin-bottom: 80px !important;
+.redacteur{
+				text-transform: uppercase;
+    font-size: 14px;
+    margin: 50px 0px 50px;
 }
 a .redacteur{
 		font-size: 0.9em;
