--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -390,6 +390,17 @@ p .resume {
 		background-color: @beige;
 }
 
+/*Citation*/
+blockquote {
+ .capital;
+ color: @main;
+ width:70%;
+ border-top:5px solid white;
+ border-bottom:5px solid white;
+ border-left:none;
+ margin: 30px auto;
+}
+
 
 // ADDTHIS TOOLBOX
 .addthis_toolbox a:hover{text-decoration: none}
