--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -354,7 +354,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		text-align: right;
 }
 
-.redacteur{
+.redacteur p{
 				text-transform: uppercase;
     font-size: 14px;
     margin: 50px 0px 50px;
@@ -392,8 +392,9 @@ p .resume {
 
 /*Citation*/
 blockquote {
- .capital;
- color: @main;
+ font-weight:bold;
+	text-align: center;
+ color: @main !important;
  width:70%;
  border-top:5px solid white;
  border-bottom:5px solid white;
