--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -401,6 +401,10 @@ blockquote {
  border-left:none;
  margin: 30px auto;
 }
+@media screen and (min-width:@min_lg){
+  blockquote:not(.center){width:60%; float:right; position: relative; left:30%; margin-left:-17.5%; margin-top:0; margin-bottom: 18px;}
+  blockquote p{font-size: 16px !important; line-height: 1.6em !important}
+}
 
 
 // ADDTHIS TOOLBOX
