--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -1,7 +1,7 @@
 <div ng-controller="MenuController as menuCtrl" >
 	<nav  role="navigation" class="top-navigation">
 		<div class="home">
-			<a ng-href="/fr/accueil" class="ng-scope">
+			<a ng-href="/fr/bienvenue" class="ng-scope">
 			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
 			</a>
 		</div>
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav">
             	<!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
 				<li class="home-button">
-					<a  ng-href="{{menuCtrl.menu.url}}">$</a>
+					<a  ng-href="{{menuCtrl.menu.url}}">$</a> 
 				</li>
 				<li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
 						<!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
