--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -1,7 +1,7 @@
 <div ng-controller="MenuController as menuCtrl" >
 	<nav  role="navigation" class="top-navigation">
 		<div class="home">
-			<a ng-href="/fr/bienvenue" class="ng-scope">
+			<a ng-href="/fr/" class="ng-scope">
 			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
 			</a>
 		</div>
