--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -105,7 +105,7 @@
 								  <p style="text-align:center"><button  class="btn btn-default btn-abonne"><a rubedo-page-link="58077629245640db008ba675">Je m'abonne</a></button></br></p>
 								</div>
 								
-								<div class="col-sm-12" ng-if="isVisiteur">
+								<div class="col-sm-12" ng-if="isVisiteur && isOld">
 								  <p style="text-align:center"><button  class="btn btn-default btn-abonne"><a rubedo-page-link="58077629245640db008ba675">Je m'abonne</a></button></br></p>
 								</div>
 								
