--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -168,10 +168,10 @@
 							
 				<div ng-if="isVisiteur" style="margin-top:50px;">		  
 					<div class="col-sm-3">
-						<p style="text-align:center"  ng-if="classementArticle>0"><button  class="btn btn-default btn-abonne"><a ng-href="{{contentDetailCtrl.accesArticles.data[classementArticle-1].url}}">Article précédent</a></button></br></p>
+						<p style="text-align:center"  ng-if="classementArticle>0 || !isRestricted"><button  class="btn btn-default btn-abonne"><a ng-href="{{contentDetailCtrl.accesArticles.data[classementArticle-1].url}}">Article précédent</a></button></br></p>
 					</div>
 					<div class="col-sm-push-6 col-sm-3">
-						<p style="text-align:center" ng-if="!finListe"><button  class="btn btn-default btn-abonne"><a ng-href="{{contentDetailCtrl.accesArticles.data[classementArticle+1].url}}">Article suivant</a></button></br></p>
+						<p style="text-align:center" ng-if="!finListe || !isRestricted"><button  class="btn btn-default btn-abonne"><a ng-href="{{contentDetailCtrl.accesArticles.data[classementArticle+1].url}}">Article suivant</a></button></br></p>
 					</div>
 				</div>
 			</div>
