--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -388,6 +388,8 @@ p .resume {
 
 .presentationArticle{
 		background-color: @beige;
+		padding-right: 25px !important;
+  padding-left: 25px !important;
 }
 
 /*Citation*/
