--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -405,7 +405,7 @@ blockquote {
 }
 blockquote p{.txt-red; text-align: center; font-size: 16px !important}
 @media screen and (min-width:@min_lg){
-  blockquote:not(.center){width:60%; float:right; position: relative; left:30%; margin-left:-17.5%; margin-top:0; margin-bottom: 18px;}
+  blockquote:not(.center){width:70%; text-align: center; position: relative; margin-top:0; margin-bottom: 18px; .txt-red;}
   blockquote p{font-size: 16px !important; line-height: 1.6em !important}
 }
 
