Nouvelle dénomination : "Cana - Pour mieux aimer"

--- a/theme/cte/templates/blocks/footer.html
+++ b/theme/cte/templates/blocks/footer.html
@@ -11,7 +11,7 @@
 
    <div class="col-md-3 col-xs-6">
       <span class="capital">Nos propositions</span>
-      <a rubedo-page-link="591c46903965884239346ebe">Couples et familles</a><br />
+      <a rubedo-page-link="591c46903965884239346ebe">Cana - Pour mieux aimer</a><br />
       <a rubedo-page-link="562f32ff45205e453512ef7a">Jeunes 14-18 ans</a><br />
       <a rubedo-page-link="56abd268c445ecc9008b5342">Jeunes 18-30 ans</a><br />
       <a rubedo-page-link="57d15de0245640d9008b75a1">Jeunes professionnels</a><br />
