--- a/theme/cte/templates/blocks/formulaire/couple.html
+++ b/theme/cte/templates/blocks/formulaire/couple.html
@@ -224,6 +224,24 @@
                 </div>
             </div>            
         </div>
+        <div class="col-xs-12" ng-if="inscription.public_type == 'couple'  ||  inscription.public_type == 'couple-avec-enfants && !formCtrl.form.situation_conjugale'">
+            <h3 class="row">{{rubedo.translate("Block.Inscription.Mariage.Titre", "Mariage")}}</h3>
+            <input type="hidden" name="situationConjugale" id="mariage" value="{{rubedo.translate('Block.Inscription.SituationConjugale.Maries')}}" ng-model="inscription.situationConjugale">
+            <div class="row">
+                <div class="col-sm-4"><label for="adresse" class="label_style">{{rubedo.translate("Block.Inscription.Mariage", "Date de mariage")}}</label></div>
+                <div class="col-sm-8">
+                    <a showtab class="dropdown-toggle" id="dropdowndateMar2" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group">
+                            <input readonly id="dropdowndateMar2" ng-model="inscription.dateMariageF" type="text" class="form-control" >
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="inscription.dateMariage"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateMar2', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateMariageF = (inscription.dateMariage |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul>
+                </div>
+            </div>            
+        </div>
     </div>
     
     
