--- a/theme/cluny/templates/blocks/contentDetail/contact.html
+++ b/theme/cluny/templates/blocks/contentDetail/contact.html
@@ -19,7 +19,7 @@
 				</div>
 				<p ng-if="fieldEntity['telephone']">
 								<i class="fa fa-phone icon" style="margin-right:10px;"></i>
-								<rubedo-field style="display:inline-block" ng-if="fieldEntity['telephone']" field ="{{contentDetailCtrl.getFieldByName('telephone')}}"></rubedo-field></span>
+								<rubedo-field style="display:inline-block" ng-if="fieldEntity['telephone']" field ="{{contentDetailCtrl.getFieldByName('telephone')}}"></rubedo-field></span><br/>
 								<rubedo-field style="display:inline-block" ng-if="fieldEntity['telephone2']" field ="{{contentDetailCtrl.getFieldByName('telephone2')}}"></rubedo-field></span>
 				</p>
 				<p class="linkbox"><rubedo-field ng-repeat="field in fields track by $index" ng-if="fieldEntity[field.config.name] && (field.config.name).substring(0, 9)=='linkfield' && fieldEntity[field.config.name].title!=''"></rubedo-field></p>
