--- a/theme/cluny/css/cluny.less
+++ b/theme/cluny/css/cluny.less
@@ -246,6 +246,10 @@ p.linkbox a, p.linkbox a:hover{color: @grey; text-decoration: none; display: inl
 		font-weight: bold;
 }
 
+.panel-title a:active {
+		text-decoration: none;
+}
+
 .panel-body {
 		font-size: 1em;
 }
