--- a/theme/cte/templates/blocks/formulaire/couple.html
+++ b/theme/cte/templates/blocks/formulaire/couple.html
@@ -160,14 +160,14 @@
                 <div class="col-sm-8"><input type="text" id="tel1" name="tel1"  ng-model="inscription.tel1" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}"   ng-required="isTelephoneRequired()"></div>
                 <p ng-class=" {'txt-red' : isTelephoneRequired()}" class="infos_validation">** {{rubedo.translate("Block.Inscription.Telephone.Condition")}}</p>
             </div>   
-            <div class="row" ng-if="formCtrl.form.situation_conjugale">
+            <div class="row" ng-if="formCtrl.form.situation_conjugale && pageCana">
                  <div class="col-sm-4"><label for="classe" class="label_style">{{rubedo.translate("Block.Inscription.SituationConjugale")}}</label></div>
                  <div class="col-sm-8">
                      <div class="col-xs-12">
                          <input type="radio"  name="situationConjugale" id="mariage" value="{{rubedo.translate('Block.Inscription.SituationConjugale.Maries')}}" ng-model="inscription.situationConjugale" required>
                                  <label for="mariage">{{rubedo.translate('Block.Inscription.SituationConjugale.Maries')}}</label>
                                  
-                        <div class="dropdown col-xs-12" ng-if="inscription.situationConjugale == rubedo.translate('Block.Inscription.SituationConjugale.Maries') && pageCANA" style="margin-bottom: 12px">
+                        <div class="dropdown col-xs-12" ng-if="inscription.situationConjugale == rubedo.translate('Block.Inscription.SituationConjugale.Maries')" style="margin-bottom: 12px">
                             <label class="col-xs-12">{{rubedo.translate('Block.Inscription.Mariage')}}</label>
                             <a showtab class="dropdown-toggle" id="dropdowndateMar" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group">
