--- a/theme/cluny/templates/blocks/contentDetail/album.html
+++ b/theme/cluny/templates/blocks/contentDetail/album.html
@@ -1,3 +1,4 @@
+
 <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
 	<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
 <style>
@@ -121,37 +122,87 @@
 }
 .masonry-brick:hover .img-description{opacity:1}
 .masonry-brick:not(.loaded) .img-description{display: none}
-</style>
-	
-<div class="container">
-	<!---ANCIENS ALBUMS (non embedded images)-->
-	<div ng-if="contentDetailCtrl.content.fields.images && contentDetailCtrl.content.fields.images.length>0" class="row">
-				  <div class="grid" masonry masonry-options="{ gutter: '.gutter-sizer',percentPosition: true }" reload-on-resize>
-								  <div class="masonry-brick" ng-repeat="image in contentDetailCtrl.content.fields.images track by $index"  >
-												  <img ng-src="{{rubedo.imageUrl.getUrlByMediaId(image,{width:'900',height:'600',mode:'boxed'})}}" style="width:100%"/>
-												  <div class="img-description hidden-xs" data-toggle="modal" data-target="#rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" ng-click="contentDetailCtrl.loadModal($index,false)">
-																  <i class="fa fa-expand"></i>
-												  </div>
-								  </div>
-								  <div class="gutter-sizer"></div>
-				  </div>
-		  <!-- The modal dialog, which will be used to wrap the lightbox content -->
-				  <div class="modal fade hidden-xs rubedoGalleryDetailModal" id="rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" tabindex="1" ng-keydown="contentDetailCtrl.changeImageKey($event,false)">
-								  <a class="prev" ng-click="contentDetailCtrl.changeImage('left',false)" ng-if="contentDetailCtrl.currentIndex>0">‹</a>
-								  <a class="next" ng-click="contentDetailCtrl.changeImage('right',false)" ng-if="contentDetailCtrl.currentIndex<(contentDetailCtrl.content.fields.images).length-1">›</a>
-								  <a class="close" data-dismiss="modal">×</a>
-								  <div class="modal-dialog modal-lg">
-												  <div class="modal-body">
-																  <img class="img-responsive" ng-src="{{rubedo.imageUrl.getUrlByMediaId(contentDetailCtrl.currentImage,{width:'900',height:'600',mode:'boxed'})}}">
-											  </div>
-		  
-								  </div>
-				  </div>
-	</div>
 
+</style>
+<div class="container-fluid" ng-if="!blockConfig.contentOnly">
+	<div class="row">
+		<div class="col-xs-12 ">
+			<div ng-controller="BreadcrumbController as breadcrumbCtrl">
+				<ol class="breadcrumb hidden-xs">
+				    <li ng-class="{'active': !page.url}" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index"><a ng-if="page.url" ng-href="{{page.url}}">{{page.title}}</a><span ng-if="!page.url">{{page.title}}</span></li>
+				</ol>
+				<a class="header_link visible-xs" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index" ng-href="{{page.url}}" ng-if="$first">{{page.title}}</a>
+			</div>
+		</div>
+	</div>
 </div>
-	
-<div style="margin-top:24px"></div>
+
+<header class="container-fluid" style="margin-bottom: 48px" ng-if="!blockConfig.contentOnly">
+	<div class="text-article grid">
+		
+		<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
+			<h1 ng-if="!fieldEditMode" style="text-shadow: none, text-align: center, margin-top: 30px">{{fieldEntity['text']}}</h1>
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEditMode"></rubedo-field>
+		</div>
+		<p style="text-shadow: none, font-style: italic" ng-if="fieldEntity['date'] && !fieldEditMode">{{contentDetailCtrl.content.fields.date*1000 | date:'longDate'}}</p>
+		<rubedo-field field = "{{contentDetailCtrl.getFieldByName('date')}}" ng-if="fieldEntity['date'] && fieldEditMode"></rubedo-field>
+
+
+
+	</div>
+</header>
+<div class="row">
+				<div class="col-xs-12">
+								<div class="text-article grid">
+
+									  <div style="text-align: right" data-addthis-toolbox  data-title="{{rubedo.current.page.title}}"  data-summary="{{contentDetailCtrl.content.fields.summary}}" class="addthis_toolbox socials" ng-if="!blockConfig.contentOnly">
+													  <!--<a class="addthis_button_facebook_like txt-red" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
+													  <a class="addthis_button_facebook txt-red"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
+													  <a class="addthis_button_twitter txt-red"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
+													  <a class="addthis_button_email txt-red"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
+													  <a class="addthis_button_expanded txt-red"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
+													  <span class="txt-red capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
+									  </div>
+									  {{contentDetailCtrl.tooltips()}}
+									  
+
+								</div>
+				</div>
+</div>
+<div class="row text-article" ng-if="fieldEntity['description']">
+				<div class="col-xs-12">
+							  <div class="grid">
+									  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('description')}}" ></rubedo-field>
+									  <br/><br/><br/>
+							  </div>
+				</div>
+</div>
+
+
+<!---ANCIENS ALBUMS (non embedded images)-->
+<div ng-if="contentDetailCtrl.content.fields.images && contentDetailCtrl.content.fields.images.length>0">
+				<div class="grid" masonry masonry-options="{ gutter: '.gutter-sizer',percentPosition: true }" reload-on-resize>
+								<div class="masonry-brick" ng-repeat="image in contentDetailCtrl.content.fields.images track by $index"  >
+												<img ng-src="{{rubedo.imageUrl.getUrlByMediaId(image,{width:'900',height:'600',mode:'boxed'})}}" style="width:100%"/>
+												<div class="img-description hidden-xs" data-toggle="modal" data-target="#rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" ng-click="contentDetailCtrl.loadModal($index,false)">
+																<i class="fa fa-expand"></i>
+												</div>
+								</div>
+								<div class="gutter-sizer"></div>
+				</div>
+  <!-- The modal dialog, which will be used to wrap the lightbox content -->
+				<div class="modal fade hidden-xs rubedoGalleryDetailModal" id="rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" tabindex="1" ng-keydown="contentDetailCtrl.changeImageKey($event,false)">
+								<a class="prev" ng-click="contentDetailCtrl.changeImage('left',false)" ng-if="contentDetailCtrl.currentIndex>0">‹</a>
+								<a class="next" ng-click="contentDetailCtrl.changeImage('right',false)" ng-if="contentDetailCtrl.currentIndex<(contentDetailCtrl.content.fields.images).length-1">›</a>
+								<a class="close" data-dismiss="modal">×</a>
+								<div class="modal-dialog modal-lg">
+												<div class="modal-body">
+																<img class="img-responsive" ng-src="{{rubedo.imageUrl.getUrlByMediaId(contentDetailCtrl.currentImage,{width:'900',height:'600',mode:'boxed'})}}">
+											</div>
+  
+								</div>
+				</div>
+</div>
 
 
 
