Ajout mail confirmation Cluny

--- a/theme/cluny/templates/blocks/simpleContact2.html
+++ b/theme/cluny/templates/blocks/simpleContact2.html
@@ -14,7 +14,7 @@
       };
       lg = rubedo.current.page.locale;
       moment.locale(rubedo.current.page.locale);
-      contactCtrl.contactData.template='/theme/cte/templates/mails/reservationABFH.html';
+      contactCtrl.contactData.template='/theme/cluny/templates/mails/reservationCLUNY.html';
       lang = {
         en: {
           room: 'Room without bathroom',
@@ -39,7 +39,7 @@
       };
       contactCtrl.param.joursCumul=[0,0,31,59,90,120,151,181,212,243,273,304,334,365];">
   <!-- https://github.com/nicolasrhone/MyExtension/blob/master/src/MyExtension/Rest/V1/MailResource.php -->
-  <form name="abunaForm" class="container" role="form">
+  <form name="clunyForm" class="container" role="form">
     
         <h3>{{rubedo.translate("Block.Inscription.InfosPerso")}}</h3><br />
         <div class="row">
@@ -150,7 +150,7 @@
     
     <input type="hidden" value="0" name="nbNights" id="nbNights" ng-model="contactCtrl.contactData.nbOfNights">
     <div class="row">
-      <table class="rooms">
+      <table class="rooms container">
         <!--<tr class="headers">
           <th></th>
           <th>{{lang[lg]['price1night'] || 'Prix pour 1 nuit'}}</th>
@@ -163,7 +163,7 @@
           <td></td>
           <td colspan="2">{{lang[lg]['room'] || 'Sans salle de bain'}}</td>
           <td colspan="2">{{lang[lg]['roomSDB'] || 'Avec salle de bain'}}</d>
-          <td class="td_price">{{lang[lg]['price'] || 'Prix'}} ({{contactCtrl.contactData.nbOfNights}} {{lang[lg]['night'] || 'nuit'}}<span ng-if="contactCtrl.contactData.nbOfNights>1">s</span>) &#128;</td>
+          <td class="td_price2">{{lang[lg]['price'] || 'Prix'}} ({{contactCtrl.contactData.nbOfNights}} {{lang[lg]['night'] || 'nuit'}}<span ng-if="contactCtrl.contactData.nbOfNights>1">s</span>) &#128;</td>
         </tr>
         <tr>
           <td class="room_type">{{lang[lg]['rsingle'] || 'Chambre simple'}}</td>
@@ -174,7 +174,7 @@
           <td class="td_price">{{contactCtrl.contactData.price1 = (contactCtrl.contactData.rooms1 * contactCtrl.param.prix.single + contactCtrl.contactData.rooms1_shower * contactCtrl.param.prix.single_shower) * contactCtrl.contactData.nbOfNights|number:2}}  &#128;</td>
         </tr>
         <tr>
-          <td class="room_type">{{lang[lg]['rdouble'] || 'Chambre doucle (couple)'}}</td>
+          <td class="room_type">{{lang[lg]['rdouble'] || 'Chambre double (couple)'}}</td>
           <td class="room_prix">{{contactCtrl.param.prix.double}} &#128;/{{lang[lg]['night'] || 'nuit'}}</td>
           <td class="td_input"><input id="rooms2" name="rooms2" ng-model="contactCtrl.contactData.rooms2" ng-init="contactCtrl.contactData.rooms2 = 0"  type="number" min="0" max="100" class="form-control"></td>
           <td class="room_prix">{{contactCtrl.param.prix.double_shower}} &#128;/{{lang[lg]['night'] || 'nuit'}}</td>
@@ -197,9 +197,17 @@
           <td class="td_input"><input id="rooms4_shower" name="rooms4_shower" ng-model="contactCtrl.contactData.rooms4_shower" ng-init="contactCtrl.contactData.rooms4_shower = 0"  type="number" min="0" max="100" class="form-control"></td>
           <td class="td_price">{{contactCtrl.contactData.price4 = (contactCtrl.contactData.rooms4 * contactCtrl.param.prix.quadruple + contactCtrl.contactData.rooms4_shower * contactCtrl.param.prix.quadruple_shower) * contactCtrl.contactData.nbOfNights|number:2}}  &#128;</td>
         </tr>
+        <tr>
+              <td class="room_type">{{lang[lg]['group_young_adults'] || 'Chambres pour les groupes de jeunes'}}</td>
+              <td class="room_prix">{{contactCtrl.param.prix.group_young_adults}} &#128;/{{lang[lg]['night'] || 'nuit'}}</td>
+              <td class="td_input"><input id="rooms5" name="rooms5" ng-model="contactCtrl.contactData.rooms5" ng-init="contactCtrl.contactData.rooms5 = 0"  type="number" min="0" max="100" class="form-control"></td>
+              <td colspan="2">Indiquer le nombre de personnes (>25)</td>
+              <td class="td_price">{{contactCtrl.contactData.price5 = contactCtrl.contactData.rooms5 * contactCtrl.param.prix.group_young_adults  * contactCtrl.contactData.nbOfNights|number:2}}  &#128;</td>
+            </tr>
         <tr class="total">
           <td class="td_total" colspan="5">Sous-total</td>
-          <td class="td_price">{{contactCtrl.contactData.sous_total = (contactCtrl.contactData.price4
+          <td class="td_price">{{contactCtrl.contactData.sous_total = (contactCtrl.contactData.price5
+                                                                  + contactCtrl.contactData.price4
                                                                   + contactCtrl.contactData.price3
                                                                   + contactCtrl.contactData.price2
                                                                   + contactCtrl.contactData.price1|number:2)}} &#128;</td>
@@ -217,9 +225,10 @@
             <td colspan="2">* les enfants de moins de 10 ans en sont exempts</td>
             <td class="td_price">{{contactCtrl.contactData.taxe = contactCtrl.contactData.nb_adults * contactCtrl.param.prix.taxe  * contactCtrl.contactData.nbOfNights|number:2}}  &#128;</td>
           </tr>
-        <tr class="total">
-            <td class="td_total" colspan="5">Total</td>
-            <td class="td_price">{{contactCtrl.contactData.total = (contactCtrl.contactData.price4
+        <tr class="total2">
+            <td class="td_total2" colspan="5">Total</td>
+            <td class="td_price2">{{contactCtrl.contactData.total = (contactCtrl.contactData.price5
+                                                                  + contactCtrl.contactData.price4
                                                                   + contactCtrl.contactData.price3
                                                                   + contactCtrl.contactData.price2
                                                                   + contactCtrl.contactData.price1
@@ -260,14 +269,14 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-10">
+      <div class="col-sm-12">
         <label for="message57e55560245640e4448b6f5b" class="label_style left">{{lang[lg]['comments'] || 'Commentaires'}}</label>
         <textarea name="message" rows="5" placeholder="{{lang[lg]['comments_placeholder'] || 'Écrivez ici toute information utile pour vous accueillir au mieux :)&#10; (intolérances alimentaires, allergies, fumeurs, animaux, ...)'}}" ng-model="contactCtrl.contactData.remarks" class="form-control" id="message57e55560245640e4448b6f5b">                                            </textarea>
       </div>
     </div>
 
     <div class="row">
-      <div class="button" ng-init="confirmMsg=false;" ng-class="{rouge: abunaForm.$valid, disabled: abunaForm.$invalid, submit: abunaForm.$invalid}" ng-click="contactCtrl.submit();confirmMsg=true;">Réserver</div>
+      <div class="button" ng-init="confirmMsg=false;" ng-class="{rouge: clunyForm.$valid, disabled: clunyForm.$invalid, submit: clunyForm.$invalid}" ng-click="contactCtrl.submit();confirmMsg=true;">Réserver</div>
     </div>
 
     <div class="row confirm" ng-if="confirmMsg">
@@ -285,26 +294,30 @@
     color: white;
     border-radius: 5px;
     box-shadow: 0px 3px 4px 0px #a8c1a0;
-    font-family: Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: MyanmarText,Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   table.rooms {
     margin-bottom: 1em;
-    border-bottom: 1px solid #bc8923;
-    font-family: Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    border-bottom: 1px solid #c5ad7d;
+    font-family: MyanmarText, Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   tr.detail {
     text-align: center;
     font-size:1.2em;
   }
   tr.headers {
-    border-bottom: 1px solid #bc8923;
+    border-bottom: 1px solid #c5ad7d;
   }
   tr.total {
+    background-color: #c5ad7d;
+    color: white;
+  }
+  tr.total2 {
     background-color: #bc8923;
     color: white;
   }
   tr {
-    border-bottom: 1px solid #d5d5d5;
+    border-bottom: 1px solid #c5ad7d;
   }
   td.room_type {
     font-weight: bold;
@@ -316,11 +329,18 @@
 
   }
   td.td_price {
+    background-color: #c5ad7d;
+    color: white;
+    text-align: right;
+    padding-right: 1em;
+    padding-left: 1em;
+  }
+  td.td_price2 {
     background-color: #bc8923;
     color: white;
     text-align: right;
     padding-right: 1em;
-    padding-left: 0.5em;
+    padding-left: 1em;
   }
   td.room_prix {
     text-align: right;
@@ -335,9 +355,12 @@
   td.td_total {
     padding: 0.5em;
   }
+  td.td_total2 {
+    padding: 0.5em;
+  }
   td {
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
   }
   input.email {
     border-color: #d5c5b5;
