--- a/theme/cana_org/templates/blocks/navigation.html
+++ b/theme/cana_org/templates/blocks/navigation.html
@@ -1,6 +1,7 @@
+
 <nav class="navbar navbar-fixed-top" role="navigation" ng-controller="MenuController as menuCtrl"  scroll-position="scroll" ng-class="{'transparent':(rubedo.current.page.id==blockConfig.rootPage && scroll<500)}">
     <div class="container-fluid" style="overflow: visible">
-        <div class="navbar-header">
+        <div class="navbar-header home">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">{{rubedo.translate("Blocks.Navigation.Label.ToggleNavigation", "Toggle navigation")}}</span>
                 <span class="icon-bar"></span>
@@ -8,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a scroll-position="scroll2" ng-if="blockConfig.displayRootPage && blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}"/>
+                <img   class="img-responsive" ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}"/>
                <!-- -->
             </a>
         </div>
