--- a/theme/cana_org/css/cana.less
+++ b/theme/cana_org/css/cana.less
@@ -183,6 +183,26 @@ iframe{width:100% !important}
 		.video-txt{padding: 10px; height: 200px; overflow-y: hidden}
 }
 p.linkbox a, p.linkbox a:hover{color: @grey; text-decoration: none; display: inline-block;		padding: 8px 12px 8px; border: 2px solid @grey; border-radius: 18px;		text-transform: uppercase}
+
+/* PAGINATION */
+.pagination>.active{
+  >a,>span{background-color: @rouge;
+    border-color: @rouge;
+    &:hover,&:focus{
+      background-color: @rouge;
+      border-color: @rouge;
+    }
+  }
+}
+.pagination>li>{
+  >a,>span{ color: @rouge;
+    &:hover,&:focus{
+      color: @rouge;
+    }
+  }
+}
+
+
 /*FOOTER*/
 .footer{
 		background: @txt; color:white; a{color:white};
