--- a/theme/cana_org/templates/blocks/d3Script.html
+++ b/theme/cana_org/templates/blocks/d3Script.html
@@ -7,13 +7,13 @@
     </div>
     <ng-include src="d3ScriptCtrl.ccnMap" class="hidden-xs"></ng-include>
     <div class="visible-xs-block regions-list">
-        <h3>{{rubedo.translate("Block.Carte.Presence.Perm","Pays où la Communauté assure une présence permanente")}}</h3>
+        <h3>{{rubedo.translate("Block.Carte.Presence.Perm.Cana","Mission CANA avec présence permanente de la Communauté du Chemin Neuf")}}</h3>
         <ul>
             <li ng-repeat="country in d3ScriptCtrl.countryList  | orderBy:'name'" ng-if="country.fillKey== 'present'">
                 <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
             </li>
         </ul>
-        <h3>{{rubedo.translate("Block.Carte.Presence.Ponct","Pays où la Communauté assure une présence ponctuelle")}}</h3>
+        <h3>{{rubedo.translate("Block.Carte.Presence.Ponct.Cana","Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf")}}</h3>
         <ul>
             <li ng-repeat="country in d3ScriptCtrl.countryList  | orderBy:'name'"  ng-if="country.fillKey== 'active'">
                 <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="modal-body row">
                         <div class="col-sm-6  regions-list">
-                            <h4>{{rubedo.translate("Block.Carte.Presence.Perm","Pays où la Communauté assure une présence permanente")}}</h4>
+                            <h4>{{rubedo.translate("Block.Carte.Presence.Perm.Cana","Mission CANA avec présence permanente de la Communauté du Chemin Neuf")}}</h4>
                             <ul>
                                 <li ng-repeat="country in d3ScriptCtrl.countryList |  orderBy:'name'" ng-if="country.fillKey== 'present'">
                                     <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
@@ -37,7 +37,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6  regions-list">
-                            <h4>{{rubedo.translate("Block.Carte.Presence.Ponct","Pays où la Communauté assure une présence ponctuelle")}}</h4>
+                            <h4>{{rubedo.translate("Block.Carte.Presence.Ponct.Cana","Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf")}}</h4>
                              <ul>
                                 <li ng-repeat="country in d3ScriptCtrl.countryList | orderBy:'name'"  ng-if="country.fillKey== 'active'">
                                     <a ng-href="{{country['url']}}" target="_blank">{{country.name}}</a>
