--- a/theme/cana_org/templates/blocks/ccnMap.html
+++ b/theme/cana_org/templates/blocks/ccnMap.html
@@ -81,8 +81,8 @@
         map.legend({
             legendTitle : "",
             labels: {
-                present: translations['Block.Carte.Presence.Perm'],
-                active: translations['Block.Carte.Presence.Ponct'],
+                present: translations['Block.Carte.Presence.Perm.Cana'],
+                active: translations['Block.Carte.Presence.Ponct.Cana'],
             },
         });
         
