--- a/theme/cana_org/templates/blocks/d3Script.html
+++ b/theme/cana_org/templates/blocks/d3Script.html
@@ -25,7 +25,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only ng-binding">{{rubedo.translate("Label.Close","Close")}}</span></button>
-                        <h4 class="modal-title ng-binding" id="countryListModalLAbel">Liste des pays</h4>
+                        <h4 class="modal-title ng-binding" id="countryListModalLAbel">{{rubedo.translate("Block.Carte.Liste","Liste des pays")}}</h4>
                     </div>
                     <div class="modal-body row">
                         <div class="col-sm-6  regions-list">
