--- a/theme/cluny/templates/blocks/navigation.html
+++ b/theme/cluny/templates/blocks/navigation.html
@@ -15,7 +15,23 @@
         </div>
         <div class="container">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav">
+                    <!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
+                     <li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
+                            <!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
+                        <a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a>
+        
+                    <!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
+                        <a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
+                        <ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
+                            <li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
+                        <!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
+                                <a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+<!--                <ul class="nav navbar-nav navbar-right">
                     <li ng-if="blockConfig.displayRootPage"><a ng-if="blockConfig.displayRootPage" ng-href="{{menuCtrl.menu.url}}">{{menuCtrl.menu.text}}</a></li>
                     <li ng-repeat="page in menuCtrl.menu.pages track by $index"
                         ng-class="{active:menuCtrl.currentRouteline.indexOf(page.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(page.url,menuCtrl.currentRouteline.length-page.url.length) > -1, dropdown:page.pages&&blockConfig.menuLevel>1}">
@@ -29,7 +45,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
+-->                    <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
                         <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
